verif/test/deca/syntax/invalid/malformed-structure-verif.res
src/test/deca/syntax/invalid/malformed-structure.deca:11:10: missing '(' at 'a'
